Fix dashboard sticky and gradient on safari

--- a/src/www/styles/content.scss
+++ b/src/www/styles/content.scss
@@ -346,6 +346,13 @@ ul{
   z-index: 1000;
   position: relative;
   margin-bottom: 20px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   h2 {
     margin-bottom: 0;
   }
@@ -355,7 +362,7 @@ ul{
     height: 20px;
     position: absolute;
     bottom:-20px;
-    background: linear-gradient(to bottom, #EEE, rgba(0, 0, 0, 0));
+    background: linear-gradient(to bottom, rgba(238, 238, 238, 1), rgba(238, 238, 238, 0));
   }
 }
 
